# ClaudeUsageMaster

./: .env.example  .gitignore  CHANGELOG.md  README.md  plan.md  project.md  pyproject.toml
.pytest_cache/v/cache/: nodeids
data/: log_checkpoint.json  questionnaire.json  rating_result.json  ratings_history.json
data/logs/: events.jsonl
docs/: acceptance_checklist.md  architecture.md
reports/: index.html  questionnaire.html
src/claude_usage_master/: __init__.py  claude_log_scanner.py  cli.py  constants.py  dimension_scorer.py  explain_copy.py  explain_service.py  fusion_service.py  hooks_tracker.py  local_store.py  local_web.py  log_analyzer.py  log_ingestor.py  models.py  questionnaire_adapter.py  rating_engine.py  report_builder.py  settings.py
src/claude_usage_master.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli_run.py  test_dimension_scorer.py  test_e2e_regression.py  test_explain_service.py  test_fixture_regression.py  test_fusion_service.py  test_hooks_tracker.py  test_local_web.py  test_log_analyzer.py  test_rating_engine.py  test_report_builder.py
tests/fixtures/: README.md  conflict_high_conf.json  conflict_low_conf.json  high_score.json  median_neutral.json
