[project]
name = "claude-usage-master"
version = "0.1.0"
description = "Local self-assessment toolkit for Claude usage proficiency"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
]

[project.scripts]
rate = "claude_usage_master.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

